--- a/NetflixCopy/src/app/app.component.css
+++ b/NetflixCopy/src/app/app.component.css
@@ -5,5 +5,13 @@ padding: 0;
 body{
 box-sizing: border-box;
 font-family: 'Ubuntu', sans-serif;
-background-color: black;
+
+}
+.navbar .navbar-brand{
+color:#E50914;
+font-weight: bold;
+}
+.navbar-nav .nav-item .nav-link{
+  color:#E50914;
+
 }
