--- a/NetflixCopy/src/app/app.component.html
+++ b/NetflixCopy/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- NavBarStart -->
-<nav class="navbar navbar-expand-lg" >
+<nav class="navbar navbar-expand-lg fixed-top [ngStyle] =navbg" >
   <div class="container-fluid">
     <a class="navbar-brand" href="#">NetflixCopy</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
