--- a/NetflixCopy/src/app/pages/home/home.component.html
+++ b/NetflixCopy/src/app/pages/home/home.component.html
@@ -11,8 +11,9 @@
       >
         <img src="https://image.tmdb.org/t/p/original/{{b.backdrop_path}}" class="d-block w-100" alt="Image The movie database" />
         <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+
+          <h5>{{b.original_title}}</h5>
+          <p>{{b.overview}}</p>
         </div>
       </div>
     </div>
