--- a/NetflixCopy/src/app/pages/home/home.component.html
+++ b/NetflixCopy/src/app/pages/home/home.component.html
@@ -37,5 +37,11 @@
     </button>
   </div>
 </div>
-
 <!-- banner end -->
+<div class="container mt-4 p-4">
+
+<!-- trending movies -->
+<div class="row">
+<h5 class="text-white">Trending Movies</h5>
+</div>
+</div>
