--- a/NetflixCopy/src/app/pages/home/home.component.css
+++ b/NetflixCopy/src/app/pages/home/home.component.css
@@ -1,17 +1,40 @@
 .carousel-inner {
-height: 700px;
+  height: 700px;
 }
 .carousel-inner .carousel-item {
-height: 700px;
-object-fit: cover;
-
+  height: 700px;
+  object-fit: cover;
 }
 
 .carousel-caption h5 {
-color: #e509e5;
-font-size: 30px;
+  color: #e509e5;
+  font-size: 30px;
 }
 
 .carousel-caption p {
-color:#fff;
+  color: #fff;
 }
+.rowposter {
+  display: flex;
+  overflow-y: hidden;
+  overflow-x: scroll;
+}
+.rowimg {
+  max-height: 200px;
+  object-fit: contain;
+  width: 100%;
+  box-sizing: content-box;
+  transition: transform 450ms;
+  margin-right: 7px;
+}
+.rowimg:hover {
+  transform: scale(1.3);
+  cursor: pointer;
+}
+.largeposter {
+  max-height: 300px;
+}
+.rowposter::-webkit-scrollbar{
+display: none;
+}
+
