--- a/NetflixCopy/src/app/pages/search/search.component.html
+++ b/NetflixCopy/src/app/pages/search/search.component.html
@@ -1,1 +1,11 @@
-<p>search works!</p>
+<div class="container-fluid mt-5">
+<form action="#">
+  <div class="mb-3">
+    <label for="Input1" class="form-label">Search</label>
+    <input type="text" class="form-control" id="Input1" placeholder="Serach Movie">
+  </div>
+
+
+</form>
+
+</div>
