--- a/NetflixCopy/src/app/app.component.html
+++ b/NetflixCopy/src/app/app.component.html
@@ -1,8 +1,16 @@
 <!-- NavBarStart -->
-<nav class="navbar navbar-expand-lg fixed-top [ngStyle] =navbg" >
+<nav class="navbar navbar-expand-lg fixed-top [ngStyle] =navbg">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="">NetflixCopy</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -13,7 +21,6 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/search">Search</a>
         </li>
-
       </ul>
     </div>
   </div>
