--- a/NetflixCopy/src/app/pages/search/search.component.html
+++ b/NetflixCopy/src/app/pages/search/search.component.html
@@ -1,11 +1,15 @@
-<div class="container-fluid mt-5">
-<form action="#">
-  <div class="mb-3">
-    <label for="Input1" class="form-label">Search</label>
-    <input type="text" class="form-control" id="Input1" placeholder="Serach Movie">
-  </div>
-
-
-</form>
-
+<div class="container mt-5 p-5">
+  <form action="#">
+    <div class="row">
+      <div class="mb-3">
+        <label for="Input1" class="form-label">Search</label>
+        <input
+          type="text"
+          class="form-control"
+          id="Input1"
+          placeholder="Serach Movie"
+        />
+      </div>
+    </div>
+  </form>
 </div>
