Add formgroup formscontrol

--- a/NetflixCopy/src/app/pages/search/search.component.html
+++ b/NetflixCopy/src/app/pages/search/search.component.html
@@ -10,6 +10,9 @@
           placeholder="Serach Movie"
         />
       </div>
+      <div class="col-lg-2">
+<button class="btn btn-md" type="button">Search</button>
+      </div>
     </div>
   </form>
 </div>
