--- a/NetflixCopy/src/app/pages/home/home.component.html
+++ b/NetflixCopy/src/app/pages/home/home.component.html
@@ -51,6 +51,7 @@
           src="https://image.tmdb.org/t/p/original/{{ t.poster_path }}"
           class="rowimg largeposter"
           alt="Image The movie database"
+          [routerLink]="['/movie', t.id]"
         />
       </ng-container>
     </div>
