--- a/NetflixCopy/src/app/pages/movie-details/movie-details.component.html
+++ b/NetflixCopy/src/app/pages/movie-details/movie-details.component.html
@@ -1,1 +1,11 @@
-<p>movie-details works!</p>
+<div class="container mt-5">
+<div class="row">
+<div class="col-lg-2">
+
+</div>
+<div class="col-lg-10">
+
+</div>
+
+</div>
+</div>
