--- a/NetflixCopy/src/app/pages/home/home.component.css
+++ b/NetflixCopy/src/app/pages/home/home.component.css
@@ -34,7 +34,7 @@
 .largeposter {
   max-height: 300px;
 }
-.rowposter::-webkit-scrollbar{
-display: none;
+.rowposter::-webkit-scrollbar
+{
+    display: none;
 }
-
