--- a/NetflixCopy/src/app/pages/home/home.component.html
+++ b/NetflixCopy/src/app/pages/home/home.component.html
@@ -45,15 +45,11 @@
   <!-- trending movies -->
   <div class="row">
     <h5 class="text-white">Trending Movies</h5>
-    <div div class="rowposter mt-3 p-2">
-      <ng-container *ngFor="let t of trendingMovieResult; let i = index">
-        <img
-          src="https://image.tmdb.org/t/p/original/{{ t.poster_path }}"
-          class="rowimg largeposter"
-          alt="Image The movie database"
-          [routerLink]="['/movie', t.id]"
-        />
+    <div class="rowposter mt-3 p-2">
+      <ng-container *ngFor="let t of trendingMovieResult">
+        <img src="https://image.tmdb.org/t/p/original/{{ t.poster_path }}" class="rowimg largeposter" alt="..."
+          [routerLink]="['/movie',t.id]">
       </ng-container>
+
     </div>
-  </div>
 </div>
