--- a/NetflixCopy/src/app/app.component.css
+++ b/NetflixCopy/src/app/app.component.css
@@ -5,6 +5,7 @@ padding: 0;
 body{
 box-sizing: border-box;
 font-family: 'Ubuntu', sans-serif;
+background-color: black;
 
 }
 .navbar .navbar-brand{
