--- a/NetflixCopy/src/app/pages/movie-details/movie-details.component.html
+++ b/NetflixCopy/src/app/pages/movie-details/movie-details.component.html
@@ -15,6 +15,29 @@ alt="img movie deetails result"
 <div class="col-lg-10">
 <h3 class="mt-2 mb-2">{{getMovieDetailsResult.original_title}}</h3>
 <p class="mb-3 mt-3">{{getMovieDetailsResult.overview}}</p>
+<a class="btn btn-md" href="https://www.themoviedb.org/video/play?key={{getMovieVideoResult}}" rel='noopener' target="_blank">
+  Watch trailer</a>
+
+<div class="mt-4 p-4">
+    <h2 class="text-white">Top Cast</h2>
+    <div class="row">
+    <div class="col-lg-4" *ngFor="let c of getMovieCastResult">
+        <div class="row mt-2 mb-2">
+            <div class="col-lg-2" *ngIf="c.profile_path">
+                <img
+                src="https://image.tmdb.org/t/p/original/{{ c.profile_path}}"
+title="video"
+                >
+            </div>
+            <div class="col-lg-10">
+                <h3 class="text-white">{{c.original_name}}</h3>
+                <p class="text-white">{{c.character}}</p>
+            </div>
+        </div>
+
+        </div>
+
+    </div>
 
 </div>
 
